--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "extreme-sport",
+  "name": "ExtremeSport",
   "description": "Desktop app for extreme sport",
   "version": "1.0.0",
   "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
@@ -11,10 +11,17 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/joy": "^5.0.0-beta.25",
+    "@mui/material": "^5.15.7",
+    "axios": "^1.6.7",
     "bulma": "^0.9.4",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "electron": "^26.2.2",
